# dp

./: .gitignore  Cargo.toml  LICENSE  README.md
derive/: Cargo.toml
derive/src/: lib.rs
lsp/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  server.config.json
lsp/client/: package.json
lsp/client/src/: extension.ts
lsp/examples/: index.rs  test.dp
lsp/src/: backend.rs  chumsky.rs  completion.rs  jump_definition.rs  lib.rs  main.rs  reference.rs  server.rs  tokens.rs
src/: action.rs  context.rs  errors.rs  lib.rs  log.rs  macros.rs  main.rs  parser.rs  parsers.rs  rule.rs  syntax.rs
src/bootstrap/: rules.rs
src/expressions/: array_constructor.rs  cast.rs  condition.rs  mod.rs  object_constructor.rs
src/patterns/: mod.rs  named.rs  repeat.rs  rule_ref.rs  sequence.rs
src/syntax/: mod.rs  node.rs  token.rs
syntax/: README.md  bootstrap.dp  expression.dp  regex.dp  root.dp  rule.dp  text.dp  whitespace.dp
