[package]
name = "dp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
derive_more = "0.99.17"
log = "0.4.18"
miette = { version = "5.8.0", features = ["fancy"] }
pretty_env_logger = "0.5.0"
regex = "1.7.1"
serde = { version = "1.0.164", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
ctor = "0.2.2"
pretty_assertions = "1.3.0"
