[package]
name = "derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dp = { path = ".." }
darling = "0.20.1"
quote = "1.0.28"
syn = "2.0.18"
serde_json = "1.0.102"
proc-macro2 = "1.0.64"
serde = "1.0.171"
